style.css
body {
  margin: 0px;
}

.cell {
  width: 100px;
  height: 50px;
}

#edit {
  height: 50px;
  width: 100px;
  position: absolute;
  visibility: hidden;
}

#editInput {
  height: 50px;
  width: 100px;
  z-index: 100;
  background-color: white;
}

